# life-trajectory

./: .gitattributes  .gitignore  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.js
.cursor/rules/: design-ui-designer.mdc  design-ux-architect.mdc  design-ux-researcher.mdc  engineering-backend-architect.mdc  engineering-frontend-developer.mdc  hp-design-system.mdc
doc/: Server设计.md  加密设计.md  整体设计.md
src/: app.html
src-tauri/: .rustfmt.toml  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/crypto/: blob.rs  core.rs  error.rs  mod.rs
src-tauri/src/server/: config.rs  db.rs  error.rs  mod.rs  state.rs  transport.rs
src-tauri/src/server/commands/: entry.rs  mod.rs  vault.rs
src-tauri/src/server/dto/: entry.rs  mod.rs  vault.rs
src-tauri/src/server/handlers/: entry.rs  mod.rs  vault.rs
src-tauri/src/server/middleware/: mod.rs
src-tauri/src/server/models/: entry.rs  mod.rs  vault.rs
src-tauri/src/server/repositories/: entry.rs  mod.rs  vault.rs
src-tauri/src/server/services/: entry.rs  mod.rs  vault.rs
src/lib/bridge/: entry.ts  index.ts  type.ts  vault.ts
src/lib/components/: AppShell.svelte  EntryDetail.svelte  EntryForm.svelte  EntryListItem.svelte  ErrorBanner.svelte  UiButton.svelte  UiInput.svelte  UiTextarea.svelte  VaultGate.svelte
src/routes/: +layout.svelte  +page.svelte  layout.css
src/styles/: base.css  components.css  tokens.css
(+7 files in other folders)
